force-app/main/default/objects/trailheadapp__Trailmix__c/trailheadapp__Trailmix__c.object-meta.xml
<CustomObject>
    <description>Available Trailhead Trailmixes.</description>
    <label>Trailmix</label>
    <nameField>
        <label>Trailmix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailmixes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>