force-app/main/default/objects/trailheadapp__Trailmix__c/fields/trailheadapp__Created_At__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Created_At__c</fullName>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>