force-app/main/default/objects/trailheadapp__Trailmix__c/fields/trailheadapp__Created_By_Profile__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Created_By_Profile__c</fullName>
    <label>Created By Profile</label>
    <required>true</required>
    <type>Url</type>
</CustomField>