force-app/main/default/objects/trailheadapp__Trailmix__c/fields/trailheadapp__Creator_TH_SFID__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Creator_TH_SFID__c</fullName>
    <inlineHelpText>THIS FIELD IS NO LONGER REQUIRED. EDIT THE PROPERTIES FOR THIS FIELD ON THE PAGE LAYOUT AND UNHECK THE REQUIRED BOX.</inlineHelpText>
    <label>Created By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>