force-app/main/default/objects/trailheadapp__Trailmix__c/fields/trailheadapp__Slug__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__Slug__c</fullName>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>