force-app/main/default/objects/trailheadapp__Trailmix__c/fields/trailheadapp__URL__c.field-meta.xml
<CustomField>
    <fullName>trailheadapp__URL__c</fullName>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>