force-app/main/default/objects/trailheadapp__Trailmix__c/listViews/trailheadapp__All.listView-meta.xml
<ListView>
    <fullName>trailheadapp__All</fullName>
    <columns>NAME</columns>
    <columns>trailheadapp__External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>